# i_am_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_collect_data.md  package.xml
cfg/: workspace_params.cfg
config/: 1v1_params.yaml  hit_properties.yaml  hit_properties_air_hockey.yaml  object_properties.yaml  recorder_properties.yaml  ros_topics.yaml  ros_topics_air_hockey.yaml  world_sim_params.yaml
data/: object_data_05_00.csv  object_data_05_02.csv  object_data_05_02n.csv  object_data_05_04.csv  object_data_05_04n.csv  object_data_075_00.csv  object_data_075_02.csv  object_data_075_02n.csv  object_data_075_04.csv  object_data_075_04n.csv  object_data_10_00.csv  object_data_10_02.csv  object_data_10_02n.csv  object_data_10_04.csv  object_data_10_04n.csv  object_data_125_00.csv  object_data_125_02.csv  object_data_125_02n.csv  object_data_125_04.csv  object_data_125_04n.csv  object_data_150_00.csv  object_data_150_02.csv  object_data_150_02n.csv  object_data_150_04.csv  object_data_150_04n.csv  object_data_175_00.csv  object_data_175_02.csv  object_data_175_02n.csv  object_data_175_04.csv  object_data_175_04n.csv  object_data_200_00.csv  object_data_200_02.csv  object_data_200_02n.csv  object_data_200_04.csv  object_data_200_04n.csv  object_data_225_00.csv  object_data_225_00_new.csv  object_data_225_02.csv  object_data_225_02n.csv  object_data_225_04.csv  (+40 more)
data/airhockey_processed/: all_data_march.csv  data_consistent_march.csv
data/collect/: estimate_friction_coeff.ipynb  object_data.csv  read_predict.ipynb
data/hitting/: .~lock.out.csv#  object_data.csv  regression_data.csv  test_data1.csv  test_data2.csv  tracked_vel.bag
data/stein_distance/: stein_IK_1.csv  stein_inertia_1.csv
desired_hitting_fluxes/: exp_test.txt  high_fluxes.txt  low_fluxes.txt  medium_fluxes.txt
docker/: .build-server.sh.swp  Dockerfile  Dockerfile_inertia  build-server.sh  start_docker.sh
include/: 1v1_collect_data.h  1v1_master.h  AirHockey.hpp  DataLogging.hpp  Recorder.hpp  air_hockey.h  block.h  calculate_alpha.h  collect_data.h  dynamical_system.h  hit_DS.h  hit_motion.h  hit_motion_sim.h  hittable.h  hitting_DS.h  inertia_motion_qp.h  init_world_sim.h  kalman.h  keyboard_interaction.hpp  modeselektor.h  modulated_DS.h  momentum_hit.h  move_robot.h  node_hit.h  node_hit_real.h  node_hit_sim.h  node_inertia_QP.h  nominal_DS_aux.h  nominal_DS_main.h  optimizer.h  post_hit.h  push_release_real.h  quattools.h  rest.h  track.h  tracking_velocity.h
include/tools/: hittable.h  quattools.h
launch/: 1v1_Gazebo.launch  1v1_Gazebo_record.launch  1v1_Kalman.launch  1v1_Real-Gazebo.launch  1v1_Real.launch  air_hockey.launch  air_hockey_gazebo_record.launch  air_hockey_inertia_sim.launch  air_hockey_kalman.launch  air_hockey_real.launch  air_hockey_real_gazebo.launch  air_hockey_real_with_sim.launch  air_hockey_sim.launch  hit_with_momentum.launch  hit_with_momentum_agx.launch  hit_with_momentum_real.launch  hitting.launch  hitting_DS.launch  hitting_DS_real.launch  inertia_motion.launch  optitrack.launch  passive_tracking_dual.launch  push_release_real.launch  spawn_env.launch  spawn_objects.launch
msg/: FSM_state.msg
object_models/: big_box.urdf  box.sdf  box.urdf  hollow_box.sdf  table.urdf
plotting/: analyse_data.py  plot_hit_data.py  plot_robot_state.py  process_data.py
python_binding/: CMakeLists.txt
python_binding/include/: dynamical_system.h
python_binding/pythonApi/: py_wrap_dynamical_system.cpp
python_binding/src/: dynamical_system.cpp
python_data_processing/: analyse_data.py  plot_hit_data.py  process_data.py
python_data_processing/gmm_torch/: example.py
script/: agx_control.py  agx_hit_grab_toss.py  agx_topic_conversion.py  python_agx_control.py  python_agx_dual_arm_inertial.py  python_agx_full_inertia_control.py  python_agx_passive_inertial_control.py
src/: 1v1_hitting_DS.cpp  1v1_init.cpp  1v1_key_ctrl.cpp  1v1_master.cpp  1v1_trail_init.cpp  AirHockey.cpp  Recorder.cpp  air_hockey.cpp  calculate_alpha.cpp  collect_data.cpp  drop_object.cpp  dynamical_system.cpp  hit_motion.cpp  hit_motion_sim.cpp  hitting.cpp  hitting_DS.cpp  inertia_motion_qp.cpp  init_world_old.cpp  init_world_sim.cpp  key_ctrl.cpp  momentum_hit.cpp  move_robot.cpp  node_hit.cpp  node_hit_real.cpp  node_hit_sim.cpp  node_inertia_QP.cpp  optimizer.cpp  push_release_real.cpp  tracking_velocity.cpp
src/modes/: block.cpp  hit_DS.cpp  post_hit.cpp  rest.cpp  track.cpp
src/tools/: hittable.cpp  kalman.cpp  kalman2.cpp  modeselektor.cpp  modulated_DS.cpp  nominal_DS_aux.cpp  nominal_DS_main.cpp  quattools.cpp
urdf/: iiwa7.urdf
